# topcoat

./: :w  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
benchmarks/scripts/: compare.sh
benchmarks/topcoat/src/: app.rs
crates/topcoat/: Cargo.toml
crates/topcoat-asset/: Cargo.toml  README.md
crates/topcoat-asset/src/: asset.rs  bundle.rs  bundler.rs  error.rs  lib.rs  manifest.rs  options.rs  source.rs  tower.rs  view.rs
crates/topcoat-asset/src/bundler/: mod.rs
crates/topcoat-cli/: Cargo.toml
crates/topcoat-cli/src/: cargo.rs
crates/topcoat-cli/src/asset/: mod.rs
crates/topcoat-cli/src/dev/: broadcast_server.rs  mod.rs
crates/topcoat-cli/src/fmt/: error.rs  mod.rs  visitor.rs
crates/topcoat-core/: Cargo.toml
crates/topcoat-core/src/context/: memoize.rs  mod.rs
crates/topcoat-dom/: Cargo.toml
crates/topcoat-dom/src/: lib.rs  macro.rs  render.rs
crates/topcoat-macro/: Cargo.toml
crates/topcoat-macro/src/: lib.rs  quote_option.rs
crates/topcoat-macro/src/component/: mod.rs
crates/topcoat-macro/src/layout/: mod.rs
crates/topcoat-macro/src/memoize/: mod.rs
crates/topcoat-macro/src/page/: mod.rs
crates/topcoat-macro/src/path_param/: mod.rs
crates/topcoat-macro/src/route/: mod.rs
crates/topcoat-macro/src/segment/: mod.rs
crates/topcoat-router/: Cargo.toml
crates/topcoat-router/docs/: module_router.md
crates/topcoat-router/macro/docs/: layer.md  layout.md  page.md  route.md  segment.md
crates/topcoat-router/macro/src/: lib.rs
crates/topcoat-router/src/: dynamic_routes.rs  error.rs  fallback.rs  layout.rs  lib.rs  listener.rs  page.rs  path.rs  route.rs  router.rs  segment.rs  serve.rs  state.rs  static_routes.rs
crates/topcoat-router/src/error/: bad_request.rs
crates/topcoat-router/src/file/: layout.rs  mod.rs  page.rs  segment.rs
crates/topcoat-router/src/manual/: router.rs
crates/topcoat-router/src/module/: layout.rs  page.rs  route.rs  router.rs
crates/topcoat-router/src/runtime/: path.rs
crates/topcoat-router/src/serde/: form.rs  json.rs
crates/topcoat-runtime/: Cargo.toml
crates/topcoat-runtime/browser/src/: binding.ts  comment.ts  context.ts  event.ts  index.ts  signal.ts
crates/topcoat-runtime/src/: lib.rs
crates/topcoat-runtime/src/expr/: expr_lit.rs  expr_signal_ref.rs
crates/topcoat-runtime/src/runtime/: bind_attribute.rs  event.rs  event_handler.rs  js.rs  mod.rs
crates/topcoat-runtime/src/value/: mod.rs  str.rs  string.rs
crates/topcoat-view/: Cargo.toml
crates/topcoat-view/macro/docs/: component.md
crates/topcoat-view/src/: lib.rs  view_writer.rs
crates/topcoat-view/src/ast/: attribute.rs  component.rs  element.rs  element_name.rs  mod.rs  node.rs  node_expr.rs  node_for_loop.rs  node_if.rs  node_let.rs  node_match.rs  view.rs  view_expr.rs  view_writer.rs
crates/topcoat-view/src/output/: mod.rs  view_writer_match.rs
crates/topcoat-view/src/parse/: ast.rs  attribute.rs  (+6 more)
crates/topcoat-view/tests/: pretty.rs
crates/topcoat/docs/: getting_started.md  router.md
crates/topcoat/src/: dev.rs  lib.rs  serve.rs
docs/: IDEAS.md  app_state.md  assets.md  file_router.md  memoization.md  module_router.md  path_and_query_params.md  router.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/module-router/: Cargo.toml
examples/module-router/src/: main.rs
(+96 files in other folders)
