[workspace]
resolver = "2"
members = [
    "crates/topcoat", "crates/topcoat-dom",
    "crates/topcoat-macro",
    "crates/topcoat-view",

    "examples/hello-world",
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Topcoat crates
topcoat = { path = "crates/topcoat" }
topcoat-dom = { path = "crates/topcoat-dom" }
topcoat-macro = { path = "crates/topcoat-macro" }
topcoat-view = { path = "crates/topcoat-view" }

proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["parsing"] }
