[workspace]
resolver = "2"
default-members = ["examples/hello-world"]
members = [
    "crates/topcoat",
    "crates/topcoat-axum",
    "crates/topcoat-cli",
    "crates/topcoat-macro",
    "crates/topcoat-router",
    "crates/topcoat-view",

    "examples/hello-world",
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Topcoat crates
topcoat = { path = "crates/topcoat" }
topcoat-macro = { path = "crates/topcoat-macro" }
topcoat-router = { path = "crates/topcoat-router" }
topcoat-view = { path = "crates/topcoat-view" }

heck = "0.5.0"
http = "1.4.0"
matchit = "0.9.2"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.51.1" }
