[package]
name = "topcoat-cli"
version = "0.1.0"
edition = "2024"
default-run = "topcoat"

[[bin]]
name = "topcoat"
path = "src/bin/topcoat.rs"

[[bin]]
name = "cargo-topcoat"
path = "src/bin/cargo_topcoat.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
console.workspace = true
futures-util.workspace = true
indicatif.workspace = true
notify.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "io-util", "time", "sync"] }
tokio-tungstenite.workspace = true

[lints]
workspace = true
